2008-02-06  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Support for decline of invitation
	to MUC room (EJAB-515)

2008-02-06  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/node_buddy.erl: Fixed typo
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
	
	* src/mod_pubsub/gen_pubsub_node.erl: API improvement: Added a way
	to generate custom item name
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Small API improvements and
	refactoring

2008-02-04  Badlop  <badlop@process-one.net>

	* src/ejabberd.hrl: Updated version to 2.1.0-alpha
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

2008-02-04  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Append "(n/a)" to disco room
	descriptions when a number of occupants is not available

2008-02-02  Mickael Remond  <mremond@process-one.net>

	* src/mod_pubsub/nodetree_virtual.erl: Fixed error report at startup.

	* src/mod_pubsub/mod_pubsub.erl: Added the from field in the
	get_subnodes pubsub plugin API function. This is usefull to write
	plugins to generate the pubsub hierarchy dynamically, based on who
	is doing the browsing request.
	* src/mod_pubsub/gen_pubsub_nodetree.erl: Likewise
	* src/mod_pubsub/nodetree_default.erl: Likewise
	* src/mod_pubsub/nodetree_virtual.erl: Likewise
	
2008-01-30  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Removed the option served_hosts in mod_pubsub
	because it does not work correctly yet (EJAB-504)